fix alignment on next post

--- a/theme/assets/scss/components/layout.scss
+++ b/theme/assets/scss/components/layout.scss
@@ -208,6 +208,7 @@ body {
         .next {
             max-width: 48%;
             float: right;
+            text-align: right;
         }
 
         &:after {
